# rasa

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Procfile  README.md  _add_deps.bat  _batch_update.ps1  _debug_redis.py  _run_tests.bat  _verify_bus.py  architectural_schema.md  architectural_schema_v2.md  go.mod  go.sum  pyproject.toml  strategic_considerations.md  strategic_considerations_ver2.md
.claude/: settings.local.json
.hermes/: AGENTS.md  SOUL.md
cmd/eval-aggregator/: main.go
cmd/memory-controller/: main.go
cmd/orchestrator/: main.go
cmd/policy-engine/: main.go
cmd/pool-controller/: main.go
cmd/recovery-controller/: main.go
config/: gateway.yaml  nats-server.conf  pool.yaml
docs/: ARCHITECTURE_OVERVIEW.md  DEVELOPER_SETUP.md  IMPLEMENTATION_GUIDE.md  ORCHESTRATOR_WSL.md  PYTHON_WORKERS.md
internal/bus/: bus.go  bus_test.go  envelope.go  pg_publisher.go  pg_subscriber.go  redis_publisher.go  redis_subscriber.go
internal/db/: db.go
internal/eval/: aggregator.go  aggregator_test.go
internal/memory/: assembler.go  canonical.go  (+2 more)
migrations/: 001_enables.sql  010_rasa_orch.sql  020_rasa_pool.sql  030_rasa_policy.sql  040_rasa_memory.sql  050_rasa_eval.sql  060_rasa_recovery.sql  070_metrics_views.sql  080_seed_lore.sql
rasa/: __init__.py
schema/: architectural_schema_v2.1.md
scripts/: apply_lore.py  bootstrap_schema.ps1  create_databases.ps1  observe.py  setup_windows.ps1
souls/: architect-v1.yaml  coder-v2-dev.yaml  planner-v1.yaml  reviewer-v1.yaml
tests/: smoke_dispatcher.ps1  test_bus.py  test_llm_gateway.py  test_smoke.py
(+64 files in other folders)
