[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rasa"
version = "0.1.0"
description = "RASA — Reliable Autonomous System of Agents"
requires-python = ">=3.12"
dependencies = [
    "asyncio-nats-client>=0.11",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "openai>=1.35",
    "tiktoken>=0.7",
    "chevron>=0.14",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "prometheus-client>=0.20",
    "semgrep>=1.76",
    "detect-secrets>=1.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rasa"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
